cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/includedLibrary/lib_header.h

#ifndef LIB_HEADER_202433_H
#define LIB_HEADER_202433_H

#include "other_lib_header.h"

struct EMPTY_MACRO_FROM_OTHER_INCLUDE Struct202433* pGlobal202433;

#endif

